# gvm

./: .gitignore  .pp3-allowlist  LICENSE  README.md  index.html  methodology-changelog.md  pytest.ini  quick-reference.html
grounded-vibe-methodology/skills/gvm-analysis/: .gitignore  .module-allowlist  README.md  SKILL.md  matplotlibrc  pyproject.toml
grounded-vibe-methodology/skills/gvm-analysis/docs/: user-guide.html
grounded-vibe-methodology/skills/gvm-analysis/gvm_analysis/: __init__.py
grounded-vibe-methodology/skills/gvm-analysis/scripts/: _check_deps.py  _patch_questions.py  _refresh_css.py  analyse.py  anonymise.py  de_anonymise.py  domain_detect_cli.py  prefs_cli.py  render_report.py
grounded-vibe-methodology/skills/gvm-analysis/scripts/_shared/: __init__.py  aggregation.py  bundle.py  charts.py  comparison.py  constants.py  default_questions.py  diagnostics.py  domain_detect.py  drivers.py  duplicates.py  findings.py  headline.py  io.py  mapping.py  methodology.py  missing.py  outliers.py  palette.py  path_check.py  prefs.py  provenance.py  rounding.py  (+5 more)
grounded-vibe-methodology/skills/gvm-analysis/templates/: _css.html.j2  _css_overrides.html.j2  _drillthrough_column.html.j2  _drillthrough_driver.html.j2  _drillthrough_outlier.html.j2  _exec_summary.html.j2  _interactivity.js.j2  _methodology_appendix.html.j2  _provenance.html.j2  _section_data_quality.html.j2  _section_distributions.html.j2  _section_drivers.html.j2  _section_outliers.html.j2  _section_time_series.html.j2  drillthrough.html.j2  hub.html.j2
grounded-vibe-methodology/skills/gvm-analysis/tests/: conftest.py
(+316 files in other folders)
